feat: product list page redesign

--- a/lib/Language/en.json
+++ b/lib/Language/en.json
@@ -519,5 +519,9 @@
   "addressBook": "Address Book",
   "sign_out": "Sign Out",
   "Language": "Language",
-  "View": "View"
+  "View": "View",
+  "story": "Story",
+  "new_in": "NEW IN",
+  "sale": "SALE",
+  "best_seller": "BEST SELLER"
 }
