--- a/lib/Language/ar.json
+++ b/lib/Language/ar.json
@@ -519,5 +519,9 @@
   "addressBook": "ایڈریس بک",
   "sign_out": "باہر جائیں",
   "Language": "زبان",
-  "View": "دیکھیں"
+  "View": "دیکھیں",
+  "story": "کہانی",
+  "new_in": "نیا اندر",
+  "sale": "SALE",
+  "best_seller": "بہترین بیچنے والے"
 }
