feat: new home screen

--- a/lib/Language/ar.json
+++ b/lib/Language/ar.json
@@ -524,5 +524,6 @@
   "new_in": "نیا اندر",
   "sale": "SALE",
   "best_seller": "بہترین بیچنے والے",
-  "Book Now": "احجز الآن"
+  "Book Now": "احجز الآن",
+  "click here for": "انقر هنا ل"
 }
