--- a/lib/Language/en.json
+++ b/lib/Language/en.json
@@ -524,5 +524,6 @@
   "new_in": "NEW IN",
   "sale": "SALE",
   "best_seller": "BEST SELLER",
-  "Book Now":"Book Now"
+  "Book Now": "Book Now",
+  "click here for": "Click here for"
 }
