bug: small changes in design

--- a/lib/Language/ar.json
+++ b/lib/Language/ar.json
@@ -525,5 +525,9 @@
   "sale": "SALE",
   "best_seller": "بہترین بیچنے والے",
   "Book Now": "احجز الآن",
-  "click here for": "انقر هنا ل"
+  "click here for": "انقر هنا ل",
+  "Store": "محل",
+  "Become an E-Commerce Pattern": "كن شريكًا للتجارة الإلكترونية",
+  "Stores": "متاجر",
+  "Become an Service Pattern": "كن شريكًا للخدمة"
 }
