--- a/lib/Language/ar.json
+++ b/lib/Language/ar.json
@@ -529,5 +529,7 @@
   "Store": " متجر ",
   "Become an E-Commerce Pattern": " كن شريكًا للتجارة الإلكترونية",
   "Stores": "المتاجر",
-  "Become an Service Pattern": "كن شريكًا للخدمة"
+  "Become an Service Pattern": "كن شريكًا للخدمة",
+  "Follow": "يتبع",
+  "Unfollow": "الغاء المتابعة"
 }
