--- a/lib/Language/en.json
+++ b/lib/Language/en.json
@@ -531,5 +531,12 @@
   "Stores": "Stores",
   "Become an Service Partner": "Become an Service Partner",
   "Follow": "Follow",
-  "Un-Follow": "Unfollow"
+  "Un-Follow": "Unfollow",
+  "Product Indicator": "Product Indicator",
+  "None": "None",
+  "Organic": "Organic",
+  "Non-Organic": "Non-Organic",
+  "Vegan": "Vegan",
+  "Non-Vegan": "Non-Vegan",
+  "Environment Friendly": "Environment Friendly"
 }
